--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.6'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'ru.vk.bot'
 version = '0.0.1'
-sourceCompatibility = '17'
+java{
+    sourceCompatibility = '17'
+}
 
 repositories {
     mavenCentral()
@@ -19,9 +21,9 @@ jar{
 }
 
 dependencies {
-    implementation 'org.xerial:sqlite-jdbc:3.7.2'
-    implementation 'com.vk.api:sdk:1.0.14'
-    implementation 'org.springframework.boot:spring-boot:3.0.6'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.6'
-    implementation 'org.springframework.boot:spring-boot-starter-parent:3.0.6'
+    implementation 'org.xerial:sqlite-jdbc'
+    implementation 'com.vk.api:sdk'
+    implementation 'org.springframework.boot:spring-boot'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-parent'
 }
